--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        
+      - name: Configure Git
+        run: git config --global --add safe.directory /github/workspace
       
       - name: Build Writerside docs using Docker
         uses: JetBrains/writerside-github-action@v4
