--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: ZeroStudioCodeModule/hi
+  INSTANCE: Writerside/hi
   # Replace XX with the ID of the instance in capital letters
   ARTIFACT: webHelpHI2-all.zip
   # Docker image version
